# gfx

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  gfx.cpp  gfx.h  gfx_core.cpp  gfx_core.h  gfx_imgui.cpp  gfx_imgui.h  gfx_internal_types.cpp  gfx_internal_types.h  gfx_scene.cpp  gfx_scene.h  gfx_window.cpp  gfx_window.h
examples/: CMakeLists.txt
examples/00-hellotriangle/: CMakeLists.txt  main.cpp  triangle.frag  triangle.vert
examples/01-rtao/: CMakeLists.txt  main.cpp  rtao.frag  rtao.vert
examples/01-rtao/data/: sponza.mtl
examples/02-pbr/: CMakeLists.txt  ibl.comp  ibl.cpp  ibl.h  main.cpp  pbr.frag  pbr.vert  sky.frag  sky.vert  taa.frag  taa.vert
examples/02-pbr/data/SciFiHelmet/: README.md
examples/03-compute/: CMakeLists.txt  main.cpp  simple.comp
examples/03-mesh/: CMakeLists.txt  main.cpp  mesh.frag  mesh.mesh  triangle.vert
examples/common/: CMakeLists.txt  fly_camera.cpp  fly_camera.h  gpu_scene.cpp  gpu_scene.h  gpu_scene.hlsli
